	   to work correctly.
	 - Made all color calculations (color picker, color area, vectorscope
	   and histogram) take gain before lut to allow for exposure to work
	   properly.
	 - Made input color space be taken from image filename following
	   Sony's conventions.
	 - Bug fixed RY/BY/Y channel selection in luminance/chrominance
	   images.  Regression from an old version of mrViewer.

v3.9.2   - Fixed 'h' (Center Image) when the image was straight.  Regression
	   from 3.9.1.
	 - Fixed Text tool in Linux.  Previously the text would not appear
	   at all or it would show as black squares.
	 - Made OCIO Lut be a 3 channel lut, while CTL remains a 4 channel
	   lut.  This saves some memory and calculation time when using OCIO.
	 - Made OCIO Pick button in the Media Info window also update the
	   OCIO Input Color Space pull down.
	 - Made mousewheel in pulldown menus a no-op to avoid hanging.
	   This required a change in fltk's Menu_popup.cxx to set MODAL to
	   false.
	 - Fixed move picture tool to move also the data window.
	 - Fixed Masking and Safe Areas on rotation of image.
	 - Fixed OCIO default scene_linear which would not appear in
	   the ICS popup menu as selected when it was the default space.
	 - Added hotkey (SHIFT+i) to toggle Input Color Space popup and
	   fstop controls when Use OCIO is in effect.

v3.9.1   - Improved fixed pixel color when alpha was set to 0.  mrViewer
	   would incorrectly do a premult of the alpha.  Regression of
	   v3.9.0.
	 - Cosmetic change.  Gamma button will no longer display long
	   transform view names and will truncate them to the widget size.
	 - Gamma button will always display the current OCIO view
	   transform.
	 - Bug fixed alpha display in Area Color Information.  Previously
	   it would always display it as black.
	 - Fixed CentOS 7 compatibility by including libstdc++ and
	   libgcc_s DSOs to the distribution.
	 - Added an Optional Image Color Space pulldown to the top